--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 .donate-flood {
-    background-image: url(./images/donation7.jpg);
+    background-image: url(./images/donation13.jpg);
     background-size: cover;
-    background-position: inherit;
-    height: 660px;
+    background-position: initial;
+    height: 665px;
+    width: 100%;
     text-align: center;
-    color: beige;
+    color: white;
 }
 
 .flood-people {
@@ -16,6 +17,7 @@
 
 #h1first-id {
     font-size: 52px;
+    padding-top: 10px;
 }
 
 body {
@@ -32,16 +34,80 @@ body {
     font-weight: 500;
 }
 
-.donate-flood2 {
-    text-align: center;
-    margin-top: 80px;
+#para-first {
+    padding: 0 300px;
 }
 
-#h1-second {
+.donate-flood2 {
+    text-align: center;
+
+}
+
+.h1-second {
     font-size: 34px;
+    margin-top: 90px;
+    text-align: center;
 }
 
 .taka li {
     display: inline;
-    margin-left: 50px;
+    margin-left: 1%;
+    background: rgb(248, 245, 245);
+    font-size: 24px;
+    font-weight: bolder;
+    color: rgb(104, 98, 98);
+    height: 90px;
+    padding: 3% 2%;
+    border-radius: 5px;
+}
+
+#pink {
+    background-color: rgb(255, 225, 230);
+    border: 2px solid tomato;
+    color: tomato;
+}
+
+#taka-amount {
+    margin-top: 45px;
+    color: rgb(104, 98, 98);
+}
+
+#para-2 {
+    padding-left: 280px;
+    padding-right: 290px;
+    text-align: center;
+}
+
+.donate-section {
+    display: flex;
+}
+
+#food {
+    background-color: rgb(236, 249, 255);
+    margin-left: 10%;
+}
+
+#shelter {
+    background-color: rgb(255, 240, 236);
+    margin-right: 1%;
+    margin-left: 1%;
+}
+
+#education {
+    background-color: rgb(255, 229, 200);
+    margin-right: 10%;
+}
+
+.three-all {
+    padding: 4% 3% 1% 2%;
+    border-radius: 5px;
+    font-size: smaller;
+    margin-top: 1%;
+    margin-bottom: 5%;
+
+}
+
+.three-all h3 {
+    font-weight: 900;
+    font-size: 20px;
 }
