--- a/style.css
+++ b/style.css
@@ -116,6 +116,53 @@ body {
     font-size: 20px;
 }
 
+#giveway {
+    text-align: center;
+    padding-right: 15%;
+    padding-left: 15%;
+}
+
+#giv-imge {
+    margin-left: 25%;
+
+}
+
+#start-id {
+    padding: 12px 15px;
+    margin-left: 45%;
+    text-decoration: none;
+    background-image: linear-gradient(rgb(253, 95, 67), rgb(255, 97, 69));
+    color: aliceblue;
+    border-radius: 6px;
+    font-size: 16px;
+    font-weight: 500;
+}
+
+#update {
+    padding-left: 20%;
+    padding-right: 20%;
+    text-align: center;
+}
+
+.input-all {
+    display: flex;
+}
+
+#em-id {
+    margin-left: 40%;
+    margin-bottom: 5%;
+    margin-top: 5%;
+}
+
+#sub-id {
+    padding: 5px;
+    text-decoration: none;
+    background-image: linear-gradient(rgb(253, 95, 67), rgb(255, 97, 69));
+    color: white;
+    font-size: 16px;
+    font-weight: 500;
+}
+
 #h3-first {
     font-family: 'Lobster', cursive;
     color: rgb(255, 56, 95);
